--- a/assets/index.html
+++ b/assets/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="csrf-token">
-    <title></title>
-<link href="/bundle-index.css" rel="stylesheet"></head>
-<body>
-<div id="root"></div>
-<script type="text/javascript" src="/bundle-common.js"></script><script type="text/javascript" src="/bundle-index.js"></script></body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="csrf-token"><title></title><link href="/bundle-index.css" rel="stylesheet"></head><body><div id="root"></div><script src="/bundle-common.js"></script><script src="/bundle-index.js"></script></body></html>
